--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "cfs-sys"
+description = "Low-level bindings to cFE and OSAL C APIs"
 version = "0.1.0"
 authors = ["Zachary Catlin <zec0@psu.edu>"]
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+readme = "README.md"
+publish = false
 
 [dependencies]
 
