Make cfs-sys properly independent of std

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 publish = false
 
 [dependencies]
+libc = { version = "^0.2.107", default-features = false }
 
 [build-dependencies]
 bindgen = "^0.59.1"
