--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,5 @@ edition = "2018"
 
 [dependencies]
 cfs-sys = { git = "https://git.psu.edu/zec0/cfs-sys-rs.git", rev = "a80cb45e22f8cb9f1d213810661b6b17fd9f5894" }
+printf-wrap = { git = "https://git.psu.edu/zec0/printf-wrap.git", rev = "4c7f9dfa3906884586c87044259cb6b8e8393543" }
 libc = { version = "^0.2.107", default-features = false }
