--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2018"
 
 [dependencies]
 cfs-sys = { git = "https://git.psu.edu/zec0/cfs-sys-rs.git", rev = "d97258adee8f790bf19fbdb5d4362608e98afe81" }
-printf-wrap = { git = "https://git.psu.edu/zec0/printf-wrap.git", rev = "4c7f9dfa3906884586c87044259cb6b8e8393543" }
+printf-wrap = { git = "https://git.psu.edu/zec0/printf-wrap.git", rev = "4c7f9dfa3906884586c87044259cb6b8e8393543", default-features = false }
 libc = { version = "^0.2.107", default-features = false }
