--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ edition = "2021"
 
 [dependencies]
 cfs-sys = { git = "https://git.psu.edu/BlackCAT/fsw/cfs-sys-rs.git", rev = "a68965f8936b93e153b992744e93e451e7739ac1" }
-printf-wrap = { git = "https://git.psu.edu/BlackCAT/fsw/printf-wrap.git", rev = "ba319eaed99d5d842fd61c6e6ee7b9b02aa97aa8", default-features = false }
+printf-wrap = { version = "^0.1", default-features = false }
 libc = { version = "^0.2.107", default-features = false }
