Renamed crate `cfs` to `n2o4`
In order not to be confused with the official cFS project, the crate's
getting a different name. And what better name to give a Rust crate for
flight software than a hypergolic oxidizer?

--- a/etc/toolchain-cpu0.cmake.example
+++ b/etc/toolchain-cpu0.cmake.example
@@ -3,7 +3,7 @@
 #
 # This is an example, derived from a working toolchain-*.cmake,
 # shows the additions needed for Rust-based applications using
-# the `cfs` crate. In the example, the target is a Zynq 7000
+# the `n2o4` crate. In the example, the target is a Zynq 7000
 # processor (two ARM Cortex-A9 cores); linking and C compilation
 # are provided by a Yocto-generated eSDK.
 
