Added links to sample app; misc doc improvements

--- a/cfs-sys/Cargo.toml
+++ b/cfs-sys/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 readme = "README.md"
 publish = false
 workspace = ".."
+keywords = ["cFS", "cFE", "OSAL", "flight-software", "no_std"]
+categories = ["aerospace", "external-ffi-bindings", "no-std"]
 
 [dependencies]
 libc = { version = "^0.2.107", default-features = false }
