ES: added create_child_task
Creating a wrapper for CFE_ES_CreateChildTask that can accept
a Rust closure ended up requiring quite a bit of infrastructure
behind it!

--- a/n2o4/Cargo.toml
+++ b/n2o4/Cargo.toml
@@ -14,3 +14,4 @@ rust-version = "1.64.0"
 [dependencies]
 cfs-sys = { path = "../cfs-sys" }
 printf-wrap = { version = "^0.2", default-features = false }
+psm = "^0.1.21"
