--- a/.github/workflows/build-docs.yaml
+++ b/.github/workflows/build-docs.yaml
@@ -13,11 +13,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - run: pwd
+      - run: env | sort
       - run: tar xjf .github/include-files.tar.bz2
       - env:
           RUST_CFS_SYS_COMPILE_DEFINITIONS: _LINUX_OS_@_XOPEN_SOURCE=600
-          RUST_CFS_SYS_INCLUDE_DIRECTORIES: ${{ env.GITHUB_WORKSPACE }}/inc
           RUST_CFS_SYS_COMPILE_OPTIONS: -std=c99@-pedantic@-Wall@-Wstrict-prototypes@-Wwrite-strings@-Wpointer-arith@-Wcast-align@-Werror
           CC: /usr/bin/gcc
-        run: cargo doc --release
+        run: env RUST_CFS_SYS_INCLUDE_DIRECTORIES=${GITHUB_WORKSPACE}/inc cargo doc --release
       - run: ls -R build/
