--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,19 @@
-[workspace]
-resolver = "2"
-members = ["n2o4", "cfs-sys"]
-default-members = ["n2o4"]
+[package]
+name = "n2o4"
+version = "0.0.0"
+description = "Idiomatic, safe Rust bindings to cFE and OSAL APIs"
+license = "Apache-2.0"
+edition = "2021"
+readme = "README.md"
+publish = false
+keywords = ["cFS", "cFE", "OSAL", "flight-software", "no_std"]
+categories = ["aerospace", "api-bindings", "external-ffi-bindings", "no-std"]
+rust-version = "1.64.0"
+
+[dependencies]
+printf-wrap = { version = "^0.2", default-features = false }
+psm = "^0.1.21"
+
+[build-dependencies]
+bindgen = "^0.59.1"
+cc = "^1.0"
